--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,9 +4,16 @@
   font-family: 'Lato', sans-serif;   
   margin: 0;
 }
+body{
+  background-image: url("../assets/undraw_under_construction_46pa.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
 .coming_page{
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     height: 100vh;
@@ -17,8 +24,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border: 2px solid black !important;
-    width: 100%;
+    background-color: rgba(240, 240, 240,0.2);
+    width: 80%;
 
 }
 .Main_heading{
